services/httpd-sample/02.service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpd-sample
    app.kubernetes.io/component: httpd-sample
    app.kubernetes.io/instance: httpd-sample
    app.kubernetes.io/part-of: app
  name: httpd-sample
  namespace: keda-demo
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
  - name: 8443-tcp
    port: 8443
  selector:
    app.kubernetes.io/part-of: app
    deployment: httpd-sample
